tests/struct/fields_after_methods.rz
struct Foo {
    a: int
    b: any

    fn add() {}

    c: str // error: fields must be declared before methods
}